search make with all

--- a/templates/employee_list.html
+++ b/templates/employee_list.html
@@ -26,7 +26,7 @@
       type="text"
       name="search"
       value="{{ search_term }}"
-      placeholder="Search employees by name..."
+      placeholder="Search employees by name or email or postion or custom"
       class="w-full p-2 mb-4 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
       id="search-input"
     />
@@ -39,6 +39,7 @@
             <th class="py-3 px-6 text-left">Name</th>
             <th class="py-3 px-6 text-left">Email</th>
             <th class="py-3 px-6 text-left">Position</th>
+            <th class="py-3 px-6 text-left">Custom Fields</th> 
             <th class="py-3 px-6 text-left">Action</th>
           </tr>
         </thead>
@@ -48,6 +49,18 @@
             <td class="py-3 px-6 text-gray-800">{{ employee.name }}</td>
             <td class="py-3 px-6 text-gray-800">{{ employee.email }}</td>
             <td class="py-3 px-6 text-gray-600">{{ employee.position }}</td>
+            <td class="py-3 px-6 text-gray-600">
+              <!-- Render custom fields here -->
+              {% if employee.custom_fields %}
+                  <ul class="list-disc ml-5">
+                      {% for field, value in employee.custom_fields.items %}
+                          <li><strong>{{ field }}:</strong> {{ value }}</li>
+                      {% endfor %}
+                  </ul>
+              {% else %}
+                  <span>No custom fields</span>
+              {% endif %}
+          </td>
             <td class="py-3 px-6 text-gray-600">
                 <a href="{% url 'employee_view' employee.id %}" class="py-3 px-6 text-blue-600 underline">View</a>
             </td>
